fix unit testing client issue